--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hardhat-project",
   "dependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@openzeppelin/contracts": "^4.8.1",
+    "i": "^0.3.7",
+    "npm": "^9.4.0"
   }
 }
