--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "@openzeppelin/contracts": "^4.8.1",
     "i": "^0.3.7",
-    "npm": "^9.4.0"
+    "npm": "^9.4.0",
+    "solidity-coverage": "^0.8.2"
   }
 }
