--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "i": "^0.3.7",
     "npm": "^9.4.0",
     "solidity-coverage": "^0.8.2"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "ethers": "^5.0.0"
   }
 }
