--- a/third_task/package.json
+++ b/third_task/package.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "npx eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "npx eslint \"{src,apps,libs,test}/**/*.ts\" ",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
